frame/support/test/tests/pallet_ui/step_004.stderr
error: Invalid pallet::config, expect trait definition
 --> $DIR/step_004.rs:4:2
  |
4 |     struct Foo;
  |     ^^^^^^
