frame/support/test/tests/pallet_ui/step_004.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	struct Foo;
}

fn main() {
}
